fix: Update to Java 21 compatibility
- Fix encoding issues in LockableTree.java (fancy quotes)
- Update Thread.getId() to Thread.threadId() for Java 21
- All 150 files compile without errors or warnings